--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <!-- fim content -->
 
       <div class="home-img">
-        <img src="src/perfil_2-removebg-preview.png" alt="Profile picture" />
+        <img src="./src/perfil_2-removebg-preview.png" alt="Profile picture" />
       </div>
     </section>
     <!-- fim do home -->
@@ -106,7 +106,7 @@
           dali, meu interesse pela área só aumentou.
         </p>
 
-        <img src="src/eu pequeno.jpg" alt="about 1" class="img-pequeno" />
+        <img src="./src/eu pequeno.jpg" alt="about 1" class="img-pequeno" />
 
         <p>
           Minha primeira experiência profissional veio aos 15 anos, como jovem
@@ -116,7 +116,7 @@
           que me chamava mesmo era o universo da tecnologia.
         </p>
 
-        <img src="src/eu roldao.jpg" alt="about 2" class="img-roldao" />
+        <img src="./src/eu roldao.jpg" alt="about 2" class="img-roldao" />
 
         <p>
           Em 2020, ingressei na faculdade de Ciências da Computação, e como a
@@ -126,7 +126,7 @@
           me apaixonei pela programação.
         </p>
 
-        <img src="src/facul.jpg" alt="about 3" class="img-facul" />
+        <img src="./src/facul.jpg" alt="about 3" class="img-facul" />
 
         <p>
           Quando completei 18 anos, como todo jovem, enfrentei o temido "medo de
@@ -139,7 +139,7 @@
           Kkk.
         </p>
 
-        <img src="src/eu quartel.jpg" alt="about 4" class="img-quartel" />
+        <img src="./src/eu quartel.jpg" alt="about 4" class="img-quartel" />
 
         <p>
           Em 2023, após sair do quartel, ingressei no estágio como Service Desk
@@ -250,7 +250,7 @@
       <div class="portfolio-container">
         <!-- Primerio dev front -->
         <div class="portfolio-box">
-          <img src="src/Front-end.jpg" alt="portfolio 1" class="py" />
+          <img src="./src/Front-end.jpg" alt="portfolio 1" class="py" />
 
           <div class="portfolio-layer">
             <h4>Desenvolvimento Web (Front-end)</h4>
@@ -270,7 +270,7 @@
         </div>
         <!-- segundo dev back -->
         <div class="portfolio-box">
-          <img src="src/backend.jpg" alt="portfolio 2" class="py" />
+          <img src="./src/backend.jpg" alt="portfolio 2" class="py" />
 
           <div class="portfolio-layer">
             <h4>Desenvolvimento Web (Back-end)</h4>
@@ -291,7 +291,7 @@
 
         <!-- Terceiro Power BI -->
         <div class="portfolio-box">
-          <img src="src/power - bi.jpg" alt="portfolio 3" class="py" />
+          <img src="./src/power - bi.jpg" alt="portfolio 3" class="py" />
 
           <div class="portfolio-layer">
             <h4>Dashbords em Power BI</h4>
@@ -313,7 +313,7 @@
         <!-- dev Python -->
 
         <div class="portfolio-box">
-          <img src="src/python.jpg" alt="portfolio 4" class="py" />
+          <img src="./src/python.jpg" alt="portfolio 4" class="py" />
 
           <div class="portfolio-layer">
             <h4>Desenvolvimento em python</h4>
